# no-std-compat

./: Cargo.toml  README.md  check.py  generate.py
example-crates/: Cargo.toml
example-crates/core/src/: lib.rs
example-crates/liballoc/: Cargo.toml
example-crates/liballoc/src/: lib.rs
example-crates/libcore/: Cargo.toml
example-crates/libcore/src/: lib.rs
example-crates/macros/: Cargo.toml
example-crates/macros/src/: lib.rs
example-crates/unstable/: Cargo.toml
example-crates/unstable/src/: lib.rs
examples/alloc/: Cargo.toml
examples/alloc/src/: lib.rs
examples/core/: Cargo.toml
examples/core/src/: lib.rs
examples/macros/src/: lib.rs
src/: generated.rs  lib.rs
