[package]
name = "no-std-compat"
version = "0.1.0"
authors = ["jD91mZM2 <me@krake.one>"]
exclude = [ "example/**/*" ]
description = "A `#![no_std]` compatibility layer that will make porting your crate to no_std *easy*."
repository = "https://gitlab.com/jD91mZM2/no-std-compat"
categories = [ "no-std" ]
license = "MIT"
readme = "README.md"
edition = "2018"

[dependencies]
hashbrown = { version = "0.2.2", optional = true }

[dev-dependencies]
libc = "0.2.51"

[profile.dev]
panic = "abort"

[features]
alloc = []
std = []
# This will sadly also add hashbrown even if overriden by std. Cargo
# does not seem to provide any cfg(compat_hash && !std) functionality.
# Luckily, hashbrown is really small.
compat_hash = ["hashbrown"]
compat_macros = []